Pass more hostnames to 300A stack

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -45,6 +45,8 @@ Parameters:
   IdHostname: { Type: String }
   AdFilesHostname: { Type: String }
   FeederHostname: { Type: String }
+  CmsHostname: { Type: String }
+  DovetailRouterHostname: { Type: String }
   SharedGlueDatabaseName: { Type: String }
 
   AuguryEcrImageTag: { Type: String }
