--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1000,6 +1000,8 @@ Resources:
         IdHostname: !GetAtt Constants.IdHostname
         AdFilesHostname: !GetAtt Constants.AdFilesHostname
         FeederHostname: !GetAtt Constants.FeederHostname
+        CmsHostname: !GetAtt Constants.CmsHostname
+        DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
 
         # App-specific parameters
