Pass more hostnames to Augury stack

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -99,6 +99,9 @@ Resources:
         AdFilesHostname: !Ref AdFilesHostname
         FeederHostname: !Ref FeederHostname
         IdHostname: !Ref IdHostname
+        CastleHostname: !Ref CastleHostname
+        CmsHostname: !Ref CmsHostname
+        DovetailRouterHostname: !Ref DovetailRouterHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
