--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -46,6 +46,9 @@ Parameters:
   AdFilesHostname: { Type: String }
   FeederHostname: { Type: String }
   IdHostname: { Type: String }
+  CastleHostname: { Type: String }
+  CmsHostname: { Type: String }
+  DovetailRouterHostname: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
