Move some Augury environment variables into task defs

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -17,6 +17,9 @@ Parameters:
   kApplicationPort:
     Type: Number
     Default: 3000
+  kPostgresPoolSize:
+    Type: Number
+    Default: 10
   #######
   AlbFullName: { Type: String }
   AlbHttpsListenerArn: { Type: String }
@@ -284,6 +287,30 @@ Resources:
               Value: prx-mrr-us-east-1-ad-files.s3.us-east-1.amazonaws.com # TODO Multi region?
             - Name: UPLOAD_ADFILE_PUBLIC_ACCESS_HOST
               Value: !Ref AdFilesHostname
+            - Name: RAILS_SERVE_STATIC_FILES # TODO Remove from secrets
+              Value: "true"
+            - Name: POSTGRES_POOL_SIZE # TODO Remove from secrets
+              Value: !Ref kPostgresPoolSize
+            - Name: CASTLE_POSTGRES_HOST # TODO Remove from secrets
+              Value: !Ref CastlePostgresInstanceEndpointAddress
+            - Name: CASTLE_POSTGRES_PORT # TODO Remove from secrets
+              Value: !Ref CastlePostgresInstanceEndpointPort
+            - Name: CASTLE_HOST # TODO Remove from secrets
+              Value: !Ref CastleHostname
+            - Name: CMS_HOST # TODO Remove from secrets
+              Value: !Ref CmsHostname
+            - Name: DOVETAIL_HOST # TODO Remove from secrets
+              Value: !Ref DovetailRouterHostname
+            - Name: FEEDER_HOST # TODO Remove from secrets
+              Value: !Ref FeederHostname
+            - Name: ID_HOST # TODO Remove from secrets
+              Value: !Ref IdHostname
+            - Name: NEW_RELIC_LICENSE_KEY # TODO Remove from secrets
+              Value: !Ref NewRelicApiKeyPrxLite
+            - Name: NEW_RELIC_NAME # TODO Remove from secrets
+              Value: !If [IsProduction, Augury Production, Augury Staging]
+            - Name: BQ_DATASET # TODO Remove from secrets
+              Value: !If [IsProduction, production, staging]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -351,6 +378,30 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
               Value: !Ref SharedAuroraPostgresqlPort
+            - Name: RAILS_SERVE_STATIC_FILES # TODO Remove from secrets
+              Value: "true"
+            - Name: POSTGRES_POOL_SIZE # TODO Remove from secrets
+              Value: !Ref kPostgresPoolSize
+            - Name: CASTLE_POSTGRES_HOST # TODO Remove from secrets
+              Value: !Ref CastlePostgresInstanceEndpointAddress
+            - Name: CASTLE_POSTGRES_PORT # TODO Remove from secrets
+              Value: !Ref CastlePostgresInstanceEndpointPort
+            - Name: CASTLE_HOST # TODO Remove from secrets
+              Value: !Ref CastleHostname
+            - Name: CMS_HOST # TODO Remove from secrets
+              Value: !Ref CmsHostname
+            - Name: DOVETAIL_HOST # TODO Remove from secrets
+              Value: !Ref DovetailRouterHostname
+            - Name: FEEDER_HOST # TODO Remove from secrets
+              Value: !Ref FeederHostname
+            - Name: ID_HOST # TODO Remove from secrets
+              Value: !Ref IdHostname
+            - Name: NEW_RELIC_LICENSE_KEY # TODO Remove from secrets
+              Value: !Ref NewRelicApiKeyPrxLite
+            - Name: NEW_RELIC_NAME # TODO Remove from secrets
+              Value: !If [IsProduction, Augury Production, Augury Staging]
+            - Name: BQ_DATASET # TODO Remove from secrets
+              Value: !If [IsProduction, production, staging]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -513,6 +564,30 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
               Value: !Ref SharedAuroraPostgresqlPort
+            - Name: RAILS_SERVE_STATIC_FILES # TODO Remove from secrets
+              Value: "true"
+            - Name: POSTGRES_POOL_SIZE # TODO Remove from secrets
+              Value: !Ref kPostgresPoolSize
+            - Name: CASTLE_POSTGRES_HOST # TODO Remove from secrets
+              Value: !Ref CastlePostgresInstanceEndpointAddress
+            - Name: CASTLE_POSTGRES_PORT # TODO Remove from secrets
+              Value: !Ref CastlePostgresInstanceEndpointPort
+            - Name: CASTLE_HOST # TODO Remove from secrets
+              Value: !Ref CastleHostname
+            - Name: CMS_HOST # TODO Remove from secrets
+              Value: !Ref CmsHostname
+            - Name: DOVETAIL_HOST # TODO Remove from secrets
+              Value: !Ref DovetailRouterHostname
+            - Name: FEEDER_HOST # TODO Remove from secrets
+              Value: !Ref FeederHostname
+            - Name: ID_HOST # TODO Remove from secrets
+              Value: !Ref IdHostname
+            - Name: NEW_RELIC_LICENSE_KEY # TODO Remove from secrets
+              Value: !Ref NewRelicApiKeyPrxLite
+            - Name: NEW_RELIC_NAME # TODO Remove from secrets
+              Value: !If [IsProduction, Augury Production, Augury Staging]
+            - Name: BQ_DATASET # TODO Remove from secrets
+              Value: !If [IsProduction, production, staging]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
