Pass New Relic key to 200A stack

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -21,6 +21,7 @@ Parameters:
   VpcId: { Type: AWS::EC2::VPC::Id }
   VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: String }
+  NewRelicApiKeyPrxLite: { Type: String }
   SecretsBase: { Type: String }
   SecretsStackName: { Type: String }
   VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
