--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -871,6 +871,7 @@ Resources:
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
         VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         SecretsBase: !GetAtt Constants.SecretsBaseRegion
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
