Pass Feeder hostname to 200A stack

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -50,6 +50,7 @@ Parameters:
   S3StaticSiteDeployServiceToken: { Type: String }
   CastleHostname: { Type: String }
   CmsHostname: { Type: String }
+  FeederHostname: { Type: String }
   IdHostname: { Type: String }
   MetricsHostname: { Type: String }
   PlayHostname: { Type: String }
