--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -905,6 +905,7 @@ Resources:
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         CastleHostname: !GetAtt Constants.CastleHostname
         CmsHostname: !GetAtt Constants.CmsHostname
+        FeederHostname: !GetAtt Constants.FeederHostname
         IdHostname: !GetAtt Constants.IdHostname
         MetricsHostname: !GetAtt Constants.MetricsHostname
         PlayHostname: !GetAtt Constants.PlayHostname
