--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -133,6 +133,7 @@ Resources:
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
         VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref CastleEcrImageTag
         SecretsVersion: !Ref CastleSecretsVersion
@@ -150,6 +151,8 @@ Resources:
         SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+        FeederHostname: !Ref FeederHostname
+        IdHostname: !Ref IdHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
