Move some Castle environment variables to task def

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -227,19 +227,37 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Name: PG_HOST
-              Value: !If
-                - IsProduction
-                - !Ref CastleRdsPostgresqlEndpoint
-                - !GetAtt PostgresInstance.Endpoint.Address
             - Name: REDIS_HOST
               Value: !Ref SharedRedisReplicationGroupEndpointAddress
             - Name: REDIS_PORT
               Value: !Ref SharedRedisReplicationGroupEndpointPort
             - Name: REDIS_NAMESPACE
               Value: castle
-            - Name: REDIS_POOL_SIZE
-              Value: "2"
+            - Name: REDIS_POOL_SIZE # TODO Remove from secrets
+              Value: "5"
+            - Name: PORT # TODO Remove from secrets
+              Value: !Ref kApplicationPort
+            - Name: BQ_PROJECT_ID # TODO Remove from secrets
+              Value: prx-metrics
+            - Name: BQ_DATASET # TODO Remove from secrets
+              Value: !If [IsProduction, production, staging]
+            - Name: FEEDER_HOST # TODO Remove from secrets
+              Value: !Ref FeederHostname
+            - Name: ID_HOST # TODO Remove from secrets
+              Value: !Ref IdHostname
+            - Name: NEW_RELIC_LICENSE_KEY # TODO Remove from secrets
+              Value: !Ref NewRelicApiKeyPrxLite
+            - Name: NEW_RELIC_APP_NAME # TODO Remove from secrets
+              Value: !If [IsProduction, Castle Production, Castle Staging]
+            - Name: PG_HOST
+              Value: !If
+                - IsProduction
+                - !Ref CastleRdsPostgresqlEndpoint
+                - !GetAtt PostgresInstance.Endpoint.Address
+            - Name: PG_PORT # TODO Remove from secrets
+              Value: !GetAtt PostgresInstance.Endpoint.Port
+            - Name: PG_POOL_SIZE # TODO Remove from secrets
+              Value: !If [IsProduction, 50, 20]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
