Pass New Relic key to 100A stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -18,6 +18,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
+  NewRelicApiKeyPrxLite: { Type: String }
   SecretsBase: { Type: String }
   SecretsStackName: { Type: String }
   VpcPrivateSubnet1Id: { Type: AWS::EC2::Subnet::Id }
