--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -791,6 +791,7 @@ Resources:
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
         EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         SecretsBase: !GetAtt Constants.SecretsBaseRegion
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
