Pass New Relic key to ID stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -220,6 +220,7 @@ Resources:
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref IdEcrImageTag
         SecretsVersion: !Ref IdSecretsVersion
