--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -233,6 +233,8 @@ Resources:
               Value: !Ref CmsHostname
             - Name: NEW_RELIC_NAME # Remove from secrets
               Value: !If [IsProduction, id.prx.org, id.prx.org (Staging)]
+            - Name: NEW_RELIC_KEY # Remove from secrets
+              Value: !Ref NewRelicApiKeyPrxLite
             - Name: DATABASE_POOL_SIZE # Remove from secrets
               Value: "5"
           Essential: true
