Pass Exchange hostname to 100A stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -31,6 +31,7 @@ Parameters:
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   DeploymentPackageBucketName: { Type: String }
   CmsHostname: { Type: String }
+  ExchangeHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   DovetailRouterHostname: { Type: String }
