--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -809,6 +809,7 @@ Resources:
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgSecurityGroupStack.Outputs.InstanceSecurityGroupId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         CmsHostname: !GetAtt Constants.CmsHostname
+        ExchangeHostname: !GetAtt Constants.ExchangeHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
