Pass Exchange hostname to ID stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -235,6 +235,7 @@ Resources:
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CmsHostname: !Ref CmsHostname
+        ExchangeHostname: !Ref CmsHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
       Tags:
