Move SIGN_UP_URL to ID task def

--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -238,6 +238,8 @@ Resources:
               Value: !Ref NewRelicApiKeyPrxLite
             - Name: DATABASE_POOL_SIZE # Remove from secrets
               Value: "5"
+            - Name: SIGN_UP_URL # Remove from secrets
+              Value: !Sub https://${ExchangeHostname}/users/new
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
