--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -235,7 +235,7 @@ Resources:
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CmsHostname: !Ref CmsHostname
-        ExchangeHostname: !Ref CmsHostname
+        ExchangeHostname: !Ref ExchangeHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
       Tags:
