Increase instance size for Castle DB

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -360,7 +360,7 @@ Resources:
       AutoMinorVersionUpgrade: false
       BackupRetentionPeriod: 7
       CopyTagsToSnapshot: true
-      DBInstanceClass: !If [IsProduction, db.r5.xlarge, db.t3.medium]
+      DBInstanceClass: !If [IsProduction, db.r6g.2xlarge, db.t3.medium]
       DBName: !If [IsProduction, castle_production, castle_staging]
       DBParameterGroupName: !Ref PostgresParameterGroup
       DBSubnetGroupName: !Ref PostgresSubnetGroup
