--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -230,15 +230,15 @@ Resources:
               Value: !GetAtt SesSendingSmtpCredentials.UserName
             - Name: SMTP_PASSWORD
               Value: !GetAtt SesSendingSmtpCredentials.Password
-            - Name: CMS_HOST # Remove from secrets
+            - Name: CMS_HOST
               Value: !Ref CmsHostname
-            - Name: NEW_RELIC_NAME # Remove from secrets
+            - Name: NEW_RELIC_NAME
               Value: !If [IsProduction, id.prx.org, id.prx.org (Staging)]
-            - Name: NEW_RELIC_KEY # Remove from secrets
+            - Name: NEW_RELIC_KEY
               Value: !Ref NewRelicApiKeyPrxLite
-            - Name: DATABASE_POOL_SIZE # Remove from secrets
+            - Name: DATABASE_POOL_SIZE
               Value: "5"
-            - Name: SIGN_UP_URL # Remove from secrets
+            - Name: SIGN_UP_URL
               Value: !Sub https://${ExchangeHostname}/users/new
           Essential: true
           Image: !Ref EcrImageTag
