--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -233,30 +233,30 @@ Resources:
               Value: !Ref SharedRedisReplicationGroupEndpointPort
             - Name: REDIS_NAMESPACE
               Value: castle
-            - Name: REDIS_POOL_SIZE # TODO Remove from secrets
+            - Name: REDIS_POOL_SIZE
               Value: "5"
-            - Name: PORT # TODO Remove from secrets
+            - Name: PORT
               Value: !Ref kApplicationPort
-            - Name: BQ_PROJECT_ID # TODO Remove from secrets
+            - Name: BQ_PROJECT_ID
               Value: prx-metrics
-            - Name: BQ_DATASET # TODO Remove from secrets
+            - Name: BQ_DATASET
               Value: !If [IsProduction, production, staging]
-            - Name: FEEDER_HOST # TODO Remove from secrets
+            - Name: FEEDER_HOST
               Value: !Ref FeederHostname
-            - Name: ID_HOST # TODO Remove from secrets
+            - Name: ID_HOST
               Value: !Ref IdHostname
-            - Name: NEW_RELIC_LICENSE_KEY # TODO Remove from secrets
+            - Name: NEW_RELIC_LICENSE_KEY
               Value: !Ref NewRelicApiKeyPrxLite
-            - Name: NEW_RELIC_APP_NAME # TODO Remove from secrets
+            - Name: NEW_RELIC_APP_NAME
               Value: !If [IsProduction, Castle Production, Castle Staging]
             - Name: PG_HOST
               Value: !If
                 - IsProduction
                 - !Ref CastleRdsPostgresqlEndpoint
                 - !GetAtt PostgresInstance.Endpoint.Address
-            - Name: PG_PORT # TODO Remove from secrets
+            - Name: PG_PORT
               Value: !GetAtt PostgresInstance.Endpoint.Port
-            - Name: PG_POOL_SIZE # TODO Remove from secrets
+            - Name: PG_POOL_SIZE
               Value: !If [IsProduction, 50, 20]
           Essential: true
           Image: !Ref EcrImageTag
