Add Networks target group output

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -413,6 +413,9 @@ Outputs:
   FeederAlbName:
     Value: !GetAtt FeederStack.Outputs.AlbName
 
+  NetworksPublicWebTargetGroupFullName:
+    Value: !GetAtt NetworksStack.Outputs.PublicWebTargetGroupFullName
+
   PublishTargetGroupFullName:
     Value: !GetAtt PublishStack.Outputs.TargetGroupFullName
 
