--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -618,3 +618,7 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Networks }
       TaskRoleArn: !GetAtt SphinxServerTaskRole.Arn
+
+Outputs:
+  PublicWebTargetGroupFullName:
+    Value: !GetAtt PublicWebTargetGroup.TargetGroupFullName
