Add Networks requests to dashboard

--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -51,6 +51,8 @@ Parameters:
 
   MetricsTargetGroupFullName: { Type: String }
 
+  NetworksPublicWebTargetGroupFullName: { Type: String }
+
   PlayProxyTargetGroupFullName: { Type: String }
   PlayWebTargetGroupFullName: { Type: String }
 
@@ -120,6 +122,7 @@ Resources:
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IdTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "ID" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IframelyTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Iframely" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${MetricsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Metrics" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${NetworksPublicWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Networks" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PlayProxyTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Play::Proxy" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PlayWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Play::Web" } ],
                           [ "AWS/ApiGateway", "Count", "ApiId", "${ProxyApiId}", { "label": "Proxy" } ],
