--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1133,6 +1133,8 @@ Resources:
 
         MetricsTargetGroupFullName: !GetAtt Apps300AStack.Outputs.MetricsTargetGroupFullName
 
+        NetworksPublicWebTargetGroupFullName: !GetAtt Apps200AStack.Outputs.NetworksPublicWebTargetGroupFullName
+
         PlayProxyTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayProxyTargetGroupFullName
         PlayWebTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayWebTargetGroupFullName
 
