--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -23,7 +23,9 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  CastleRedisPrimaryEndPointAddress:
+  SharedRedisReplicationGroupEndpointAddress:
+    Type: String
+  SharedRedisReplicationGroupEndpointPort:
     Type: String
   UploadLambdaCodeS3ObjectKey:
     Type: String
@@ -189,8 +191,8 @@ Resources:
         DynamodbTableName: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TABLE_NAME"
         DynamodbAccessRole: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_ACCESS_ROLE"
         DynamodbTTL: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TTL"
-        RedisImpressionsHost: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/REDIS_IMPRESSIONS_HOST"
-        CastleRedisPrimaryEndPointAddress: !Ref CastleRedisPrimaryEndPointAddress
+        SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
+        SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
