Prevent unfurling link

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -185,7 +185,7 @@ Resources:
 
               // const order_ts = (Date.parse(order.created) / 1000);
 
-              let geo = ''
+              let geo = '';
 
               if (event.venue && event.venue.address) {
                 geo = `(${event.venue.address.city}, ${event.venue.address.region})`;
@@ -195,6 +195,8 @@ Resources:
                   channel: SLACK_CHANNEL,
                   username: `${SLACK_USERNAME} ${geo}`,
                   icon_emoji: SLACK_ICON,
+                  unfurl_links: false,
+                  unfurl_media: false,
                   text: [
                       `<mailto:${order.email}|${order.name}> ordered <${orderUrl}|${tickets}> for <${event.url}|${event.name.text}> (<${adminUrl}|Manage>)`,
                       `> ${total_sold} tickets ordered – ${remaining} remaining`
