Enable worker in staging

--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -351,7 +351,7 @@ Resources:
     Properties:
       Description: !Sub Periodically loads ${EnvironmentType} Remix episodes
       ScheduleExpression: rate(1 hour)
-      State: !If [IsProduction, ENABLED, DISABLED] # TODO
+      State: ENABLED
       Targets:
         - Arn: !Ref EcsClusterArn
           EcsParameters:
