Move prod Redis and Pingbacks lambdas

--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -636,12 +636,12 @@ Resources:
       Environment:
         Variables:
           PINGBACKS: "true"
-          PROCESS_AFTER: !If [IsStaging, "1634766000", ""]
+          PROCESS_AFTER: !If [IsStaging, "1634766000", "1634853600"]
       Events:
         KinesisTrigger:
           Properties:
             BatchSize: 25
-            Enabled: !If [IsStaging, true, false] # TODO
+            Enabled: true
             StartingPosition: LATEST
             Stream: !Ref MetricsKinesisStreamArn
           Type: Kinesis
@@ -929,12 +929,12 @@ Resources:
           REDIS_TTL: "7200"
           REDIS_IMPRESSIONS_HOST: !Sub cluster://${SharedRedisReplicationGroupEndpointAddress}:${SharedRedisReplicationGroupEndpointPort}
           REDIS_IMPRESSIONS_TTL: "90000"
-          PROCESS_AFTER: !If [IsStaging, "1634768100", ""]
+          PROCESS_AFTER: !If [IsStaging, "1634768100", "1634853600"]
       Events:
         KinesisTrigger:
           Properties:
             BatchSize: 100
-            Enabled: !If [IsStaging, true, false] # TODO
+            Enabled: true
             StartingPosition: LATEST
             Stream: !Ref MetricsKinesisStreamArn
           Type: Kinesis
