--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -278,24 +278,24 @@ Resources:
       Statistic: Sum
       Threshold: 0
       TreatMissingData: notBreaching
-  AnalyticsPingbacksAdzerkAlarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Condition: IsProduction
-    Properties:
-      ActionsEnabled: true
-      AlarmName: !Sub "[Analytics][Pingbacks][Adzerk] ${EnvironmentType} Too Few"
-      AlarmActions: [!Ref OpsFatalMessagesSnsTopicArn]
-      InsufficientDataActions: [!Ref OpsFatalMessagesSnsTopicArn]
-      OKActions: [!Ref OpsFatalMessagesSnsTopicArn]
-      AlarmDescription: Adzerk pingback impressions dropped below threshold
-      ComparisonOperator: LessThanThreshold
-      EvaluationPeriods: 1
-      MetricName: !Sub "analytics_pingbacks_adzerk_${EnvironmentTypeAbbreviation}"
-      Namespace: LogMetrics
-      Period: 300
-      Statistic: Sum
-      Threshold: 4000
-      TreatMissingData: breaching
+  # AnalyticsPingbacksAdzerkAlarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Condition: IsProduction
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: !Sub "[Analytics][Pingbacks][Adzerk] ${EnvironmentType} Too Few"
+  #     AlarmActions: [!Ref OpsFatalMessagesSnsTopicArn]
+  #     InsufficientDataActions: [!Ref OpsFatalMessagesSnsTopicArn]
+  #     OKActions: [!Ref OpsFatalMessagesSnsTopicArn]
+  #     AlarmDescription: Adzerk pingback impressions dropped below threshold
+  #     ComparisonOperator: LessThanThreshold
+  #     EvaluationPeriods: 1
+  #     MetricName: !Sub "analytics_pingbacks_adzerk_${EnvironmentTypeAbbreviation}"
+  #     Namespace: LogMetrics
+  #     Period: 300
+  #     Statistic: Sum
+  #     Threshold: 4000
+  #     TreatMissingData: breaching
   # redis metrics
   AnalyticsRedisLogGroup:
     Type: "AWS::Logs::LogGroup"
