--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -161,7 +161,7 @@ Resources:
       Environment:
         Variables:
           PINGBACKS: "true"
-          PROCESS_UNTIL: !If [IsStaging, "1634766000", ""]
+          PROCESS_UNTIL: !If [IsStaging, "1634766000", "1634853600"]
       Handler: index.handler
       MemorySize: 2048
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
@@ -189,7 +189,7 @@ Resources:
           REDIS_TTL: "7200"
           REDIS_IMPRESSIONS_HOST: !Sub cluster://${SharedRedisReplicationGroupEndpointAddress}:${SharedRedisReplicationGroupEndpointPort}
           REDIS_IMPRESSIONS_TTL: "90000"
-          PROCESS_UNTIL: !If [IsStaging, "1634768100", ""]
+          PROCESS_UNTIL: !If [IsStaging, "1634768100", "1634853600"]
       Handler: index.handler
       MemorySize: 512
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
