Fix SMTP to TCP

--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -346,7 +346,7 @@ Resources:
       PortRange:
         From: 587
         To: 587
-      Protocol: 17 # UDP
+      Protocol: 6 # TCP
       RuleAction: allow
       RuleNumber: 170
   OutboundIpV6SmtpNetworkAclEntry:
@@ -358,7 +358,7 @@ Resources:
       PortRange:
         From: 587
         To: 587
-      Protocol: 17 # UDP
+      Protocol: 6 # TCP
       RuleAction: allow
       RuleNumber: 171
 
