Move prod to new database; turn down pool a bit

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -250,14 +250,11 @@ Resources:
             - Name: NEW_RELIC_APP_NAME
               Value: !If [IsProduction, Castle Production, Castle Staging]
             - Name: PG_HOST
-              Value: !If
-                - IsProduction
-                - !Ref CastleRdsPostgresqlEndpoint
-                - !GetAtt PostgresInstance.Endpoint.Address
+              Value: !GetAtt PostgresInstance.Endpoint.Address
             - Name: PG_PORT
               Value: !GetAtt PostgresInstance.Endpoint.Port
             - Name: PG_POOL_SIZE
-              Value: !If [IsProduction, 50, 20]
+              Value: !If [IsProduction, "25", "10"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
