Add missing ports

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -310,8 +310,10 @@ Resources:
         Allows outbound PostgreSQL traffic from Quicksight to the
         ${EnvironmentType} Castle DB
       DestinationSecurityGroupId: !GetAtt PostgresSecurityGroup.GroupId
+      FromPort: 5432
       GroupId: !GetAtt QuicksightVpcSecurityGroup.GroupId
       IpProtocol: tcp
+      ToPort: 5432
 
   PostgresParameterGroup:
     Type: AWS::RDS::DBParameterGroup
