Add Castle DB to dashboard

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -402,6 +402,8 @@ Outputs:
 
   CastleTargetGroupFullName:
     Value: !GetAtt CastleStack.Outputs.TargetGroupFullName
+  CastlePostgresInstanceId:
+    Value: !GetAtt CastleStack.Outputs.PostgresInstanceId
   CastlePostgresInstanceEndpointAddress:
     Value: !GetAtt CastleStack.Outputs.PostgresInstanceEndpointAddress
   CastlePostgresInstanceEndpointPort:
