--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -452,5 +452,7 @@ Outputs:
     Value: !GetAtt PostgresInstance.Endpoint.Address
   PostgresInstanceEndpointPort:
     Value: !GetAtt PostgresInstance.Endpoint.Port
+  PostgresInstanceId:
+    Value: !Ref PostgresInstance
   QuicksightVpcSecurityGroupId:
     Value: !GetAtt QuicksightVpcSecurityGroup.GroupId
