--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1115,6 +1115,7 @@ Resources:
 
         BetaDeployBucketRegionalDomainName: !GetAtt Apps200AStack.Outputs.BetaDeployBucketRegionalDomainName
 
+        CastlePostgresInstanceId: !GetAtt Apps200AStack.Outputs.CastlePostgresInstanceId
         CastleTargetGroupFullName: !GetAtt Apps200AStack.Outputs.CastleTargetGroupFullName
 
         CmsElasticsearchDomainName: !GetAtt Apps100AStack.Outputs.CmsElasticsearchDomainName
