--- a/.github/workflows/theworld-org-dns-notifier.yml
+++ b/.github/workflows/theworld-org-dns-notifier.yml
@@ -23,9 +23,9 @@ jobs:
           # Required mail subject:
           subject: "[DNS Change] theworld.org"
           # Required recipients' addresses:
-          to: tech-team@prx.org
+          to: ${{secrets.MAIL_TO_THEWORLD_DNS}}
           # Required sender full name (address can be skipped):
-          from: PRX Tech Team <tech-team@prx.org>
+          from: ${{secrets.MAIL_FROM}}
           # Optional plain body:
           body: |-
             A change was made to the DNS zone template for theworld.org.
